# python_packaging_tutorial

./: LICENSE  pyproject.toml
src/example_package_cmadaria.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
