[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_cmadaria" #distribution name of package (letters, numbers, . _ -, must be unique)
version = "0.0.1" #package version
authors = [
  { name="Example Author", email="author@example.com" }, #author of the package, for maintainers is the same
]
description = "A small example package"
readme = "README.md" #detailed description of the package, shown on PyPI
requires-python = ">=3.8" #versions of python supprted by your project
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
] # include at least which version(s) of Python your package works on, license your package is available under and OS your package will work on.

[project.urls] #extra links to show on PyPI (source, documentation, etc)
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"